--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,14 @@
-:root{
-    --texto: #f2f2f2;
-    --fondo: #252426;
-    --boton: #60A6A6;
-    --boton__hover: #D94A4A;
+:root {
+  --texto: #f2f2f2;
+  --primario: #252426;
+  --boton: #60a6a6;
+  --boton__hover: #d94a4a;
+  --fondo: #d9d9d9;
+}
+
+body {
+  height: 100vh;
+  background-color: var(--fondo);
 }
 
 .navbar {
@@ -10,44 +16,39 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  background-color: var(--fondo);
+  justify-content: center;
+  background-color: var(--primario);
   color: var(--texto);
   font-weight: 600;
   font-size: 2em;
 }
 
-.items{
-    padding-left: 10px;
-    padding-right: 10px;
+.btn {
+  border-radius: 10px;
+  width: 100px;
+  height: 30px;
+  border: none;
+  background-color: var(--boton);
+  cursor: pointer;
+  transition: 0.4s ease-in;
 }
 
-.btn{
-    border-radius: 10px;
-    width: 100px;
-    height: 30px;
-    border: none;
-    background-color: var(--boton);
-    cursor: pointer;
-    transition: .4s ease-in;
-}
-
-.btn:hover{
-    box-shadow: inset -10.5em 0 0 0 var(--boton__hover), 
+.btn:hover {
+  box-shadow: inset -10.5em 0 0 0 var(--boton__hover),
     inset 10.5em 0 0 0 var(--boton__hover);
-    color: white;
+  color: white;
 }
 
-.centrar__row{
-    display: flex;
-    justify-content: center;
-    padding: 30px;
-}
-.informacion__principal{
-    height: 100vh;
-    background-color: #D9D9D9;
+.informacion__principal {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
 }
 
-.informacion__principal > h1{
-    font-size: 1.5em;
+.productos {
+  height: 50vh;
+  width: 60%;
+  text-align: center;
+  padding: 10px;
+  font-size: 1.5em;
 }
