--- a/styles.css
+++ b/styles.css
@@ -43,12 +43,71 @@ body {
   width: 100%;
   display: flex;
   align-items: flex-start;
+  justify-content: center;
 }
 
 .productos {
-  height: 50vh;
-  width: 60%;
-  text-align: center;
+  height: 80vh;
+  width: 40%;
+  text-align: flex-start;
   padding: 10px;
   font-size: 1.5em;
+  flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  justify-content: space-evenly;
+  overflow-y: auto;
+
 }
+
+.productos > h1{
+  width: 100%;
+  text-align: center;
+}
+
+.card{
+  width: 28%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: var(--boton__hover);
+  gap: 10px;
+  height: auto;
+  min-height: 300px;
+  box-shadow: -6px 6px 17px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: -6px 6px 17px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: -6px 6px 17px 0px rgba(0,0,0,0.75);
+}
+
+.card > img{
+  width: 100%;
+  height: 200px;
+  object-fit: cover; /* Ajuste de la imagen */
+}
+
+.card-container--info{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  flex-direction: column;
+}
+
+.card-container--value{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding-top: 10px;
+  font-weight: 800;
+  font-size: 1.2em;
+}
+
+.card-container--value > img{
+  width: 25px;
+}
+
+
+
+
