--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body {
   width: 100%;
   display: flex;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .productos {
@@ -108,6 +108,17 @@ body {
   width: 25px;
 }
 
-
+.formulario{
+  width: 30%;
+  border: #60a6a6 solid;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  gap: 10px;
+  font-size: 1.5em;
+  flex-wrap: wrap;
+}
 
 
