--- a/styles.css
+++ b/styles.css
@@ -131,8 +131,17 @@ body {
 .formulario-campo {
   width: 100%;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
+
+.mensaje-error{
+  font-size: .5em;
+  margin-top: 5px;
+  color: darkred;
+  font-weight: 600;
+}
+
 .campo__completo {
   padding: 10px;
   width: 80%;
