--- a/css/styles.css
+++ b/css/styles.css
@@ -49,14 +49,13 @@ body {
 .productos {
   height: 80vh;
   width: 40%;
-  text-align: flex-start;
+  gap: 10px;
   padding: 10px;
   font-size: 1.5em;
-  flex-wrap: wrap;
   display: flex;
-  flex-direction: row;
-  gap: 10px;
-  justify-content: space-evenly;
+  flex-wrap: wrap;
+  justify-content:space-evenly;
+  align-items: flex-start;
   overflow-y: auto;
   margin-bottom: 50px;
 }
@@ -104,8 +103,14 @@ body {
   font-size: 1.2em;
 }
 
-.card-container--value > img {
+.borrar {
   width: 25px;
+  transition: .3s ease-in;
+}
+
+.borrar:hover{
+  transform: scale(1.2);
+  cursor: pointer;
 }
 
 .formulario {
@@ -117,6 +122,7 @@ body {
   padding: 20px;
   font-size: 1.5em;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .form {
